--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -3,10 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サイトのタイトル</title>
-    <meta name="description" content="検索エンジンでサイトがヒットしたときに検索結果一覧に表示されるサイトの説明文">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Wizcorp | Incorporated Wizards | ウィズコープ | アプリケーション・ゲーム開発スタジオ | Webおよびモバイル技術、東京</title>
+    <meta name="description" content="私たちは国際色豊かなエンジニア、コンサルタントからなるチームです。東京を拠点に、日々、Webテクノロジーの限界に挑戦し続けています">
+    <meta name="robots" content="index, follow">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script src="js/main.js"></script>
 </head>
+<body>
+    <header>
+        <div class="top_bar">
+            <h1>
+                <a href="index.html"><img src="res/drawable/logo_wizcorp.png" alt="Quinti"></a>
+            </h1>
+            <div class="socal_buttons">
+                <a href="https://www.facebook.com/"><img src="res/drawable/facebook.png"></a>
+                <a href="https://twitter.com/"><img src="res/drawable/twitter.png"></a>
+                <a href="https://www.instagram.com/"><img src="res/drawable/instagram.png"></a>
+                <a href="https://www.youtube.com/"><img src="res/drawable/youtube.png"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#top">トップ</a></li>
+                    <li><a href="#business">事業案内</a></li>
+                    <!-- <li><a href="#technology">採用技術</a></li> -->
+                    <!-- <li><a href="#news">お知らせ</a></li> -->
+                    <li><a href="#info">会社概要</a></li>
+                    <li><a href="#contact">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+        <img src="res/drawable/banner_wizcorp.png">
+    </header>
+
+
+    <div class="wrapper">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three</div>
+        <div>Four</div>
+        <div>One</div>
+        <div>Two</div>
+        <div>Three</div>
+        <div>Four</div>
+    </div>
+      
+
+    
+    <section id="business">
+        <h1 class="center_horizontal_text">事業案内</h1>
+        <p class="center_horizontal_text">Quintiはエンジニアの育成・仕事の斡旋・エンジニアになったあとのキャリアコンサルティングを行う会社です。</p>
+        <div class="center_layout">
+            <div class="school">
+                <div class="icon"><img  src="res/drawable/youtube.png"></div>
+                <p class="description">
+                    エンジニアを無料で育ててます。条件は5年間会社に所属してもらうことです。
+                    名前の由来はTVドラマ「特攻野郎Aチーム」。世界各国から集められた優秀なエンジニアが、お客様の炎上プロジェクトの火消しに伺います。近年当社にはソフト開発における緊急なお問い合わせが殺到しています。 当社自慢のAチームは、優れたソフト開発の専門知識と経験を基に、プロジェクトの状況に合ったベストな解決策の提案と質の高いエンジニアリングを提供致します。
+                </p>
+            </div>
+            <div class="hello_work">
+                <div class="icon"><img  src="res/drawable/youtube.png"></div>
+                <p class="description">
+                    エンジニアを無料で育ててます。条件は5年間会社に所属してもらうことです。
+                    世界基準の知識基盤と高い実績を持つソフトウェアの開発や運用の経験をもとに、お客様のサービスに合わせたバックエンドのトータルサービスを提供いたします。高スケーラビリティーで自動化されたシステム「M.A.G.E」を中心に、サーバーの構成設計から構築、オペレーション・保守・モニタリングに至るまでの全ての工程をオーダーメイドでご提供することが可能です。
+                </p>
+            </div>
+            <div class="consulting">
+                <div class="icon"><img  src="res/drawable/youtube.png"></div>
+                <p class="description">
+                    エンジニアを無料で育ててます。条件は5年間会社に所属してもらうことです。
+                    当社は創業当時から最先端のWeb技術を追求し、国内においては現在トップクラスの技術と経験を持っています。　当社で開発したHTML5の技術は2D・3D共に、スマホアプリのゲームと遜色ないゲームプレイを提供する事が可能です。　PC・モバイルなどデバイスに依存せずプラグインも必要なくプレイできる、 HTML5でのゲーム制作なら弊社にお任せください。
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="info">
+        <div class="container">
+            <div class="section-title"> 
+                <h1>会社情報</h1> 
+            </div> 
+            <div class="section-content-row-fluid"> 
+                <table class="portfolio-table-company-info"> 
+                    <tbody> 
+                        <tr> <td style="text-align:right; width:35%">会社名：</td> <td>Quinti Inc.</td> </tr> 
+                        <tr> <td style="text-align:right;">設立：</td> <td>2022年4月</td> </tr> 
+                        <tr> <td style="text-align:right;">資本金：</td> <td>1000万円（2023年3月末日現在）</td> </tr> 
+                        <tr> <td style="text-align:right;">従業員：</td> <td>35名</td> </tr> 
+                        <tr> <td style="text-align:right;">代表者：</td> <td>バレンシア・ダニエル</td> </tr> 
+                        <tr> <td style="text-align:right;">所在地：</td> <td>〒286-0036<br>千葉県成田市加良部5-4-4<br>コミュニティプラザ106号室</td> </tr> 
+                    </tbody> 
+                </table> 
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container"> 
+            <div class="section-title"> 
+                <h1>お問い合わせ</h1> 
+                <p>日本語で対応致しますのでお気軽にお問い合わせ下さい。</p> 
+            </div> 
+            <div> 
+                <div class="contact"> 
+                    <div> 
+                        <div> 
+                            <p>プレスまたは採用についてのお問い合わせは、こちらからお願い致します。</p> 
+                            <div class="row-fluid"> 
+                                <address class="span6">
+                                    <img src="res/drawable/facebook.png">286-0036 千葉県成田市<br> 加良部5-4-4<br>コミュニティプラザ106号室 
+                                </address> 
+                                <address class="span6">
+                                    <span class="phone"><img src="res/drawable/facebook.png">03-4550-1448</span><br> 
+                                    <a class="mail" href="https://web.archive.org/web/20190401184727/mailto:info@wizcorp.jp">
+                                        <img src="res/drawable/facebook.png">
+                                        info@wizcorp.jp
+                                    </a>
+                                    <br>
+                                    <br> 
+                                </address> 
+                            </div> 
+                        </div> 
+                    </div> 
+                    <div class="map"> 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.1053495317224!2d140.29588781555267!3d35.77278843255192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228ba36d71bbab%3A0x577a879ef418e75a!2z44CSMjg2LTAwMzYg5Y2D6JGJ55yM5oiQ55Sw5biC5Yqg6Imv6YOo77yV5LiB55uu77yU4oiS77yU!5e0!3m2!1sja!2sjp!4v1631101533501!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer> 
+        <label class="copyright"> Copyright © 2022 Quinti. </label>
+    </footer>
+</body>
+</html>
+
+
+
+
